--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
   <title>Okafor Blessing OLuchukwu</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  
-  <!-- Favicons -->
+
+
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Google Fonts -->
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -24,20 +23,18 @@
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+
   <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <!-- ======= Header ======= -->
+
   <header id="header">
     <div class="container">
 
       <h1><a href="index.html">Okafor Blessing</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm a passionate <span>Graphics designer</span> from Abagana</h2>
 
       <nav id="navbar" class="navbar">
@@ -50,7 +47,7 @@
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
 
       <div class="social-links">
         <a href="http://wa.me//+2349064955762" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
@@ -60,12 +57,11 @@
       </div>
 
     </div>
-  </header><!-- End Header -->
+  </header>
 
-  <!-- ======= About Section ======= -->
   <section id="about" class="about">
 
-    <!-- ======= About Me ======= -->
+
     <div class="about-me container">
 
       <div class="section-title">
@@ -106,7 +102,7 @@
 
     </div>
 
-    <!-- ======= Counts ======= -->
+
     <div class="counts container">
 
       <div class="row">
@@ -145,9 +141,9 @@
 
       </div>
 
-    </div><!-- End Counts -->
+    </div>
 
-    <!-- ======= Skills  ======= -->
+
     <div class="skills container">
 
       <div class="section-title">
@@ -208,9 +204,9 @@
 
       </div>
 
-    </div><!-- End Skills -->
+    </div>
 
-    <!-- ======= Interests ======= -->
+  
     <div class="interests container">
 
       <div class="section-title">
@@ -292,9 +288,9 @@
         </div>
       </div>
 
-    </div><!-- End Interests -->
+    </div>
 
-    <!-- ======= Testimonials ======= -->
+
     <div class="testimonials container">
 
       <div class="section-title">
@@ -315,7 +311,7 @@
               <h3>Jhaypee</h3>
               <h4>Ceo Ocelot Enterprises</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -328,7 +324,7 @@
               <h3>Mr Praise</h3>
               <h4>CEO Praise Digital Services</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -341,7 +337,7 @@
               <h3>Mmesoma Okafor</h3>
               <h4>Ceo Sharon D's Counture</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -354,7 +350,7 @@
               <h3>Emma Django</h3>
               <h4>Student</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -367,7 +363,7 @@
               <h3>Bobby</h3>
               <h4>CEO MOHACO World</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
         </div>
         <div class="swiper-pagination"></div>
@@ -377,11 +373,11 @@
 
       </div>
 
-    </div><!-- End Testimonials  -->
+    </div>
 
-  </section><!-- End About Section -->
+  </section>
 
-  <!-- ======= Resume Section ======= -->
+
   <section id="resume" class="resume">
     <div class="container">
 
@@ -455,9 +451,9 @@
       </div>
 
     </div>
-  </section><!-- End Resume Section -->
+  </section>
 
-  <!-- ======= Services Section ======= -->
+
   <section id="services" class="services">
     <div class="container">
 
@@ -518,9 +514,8 @@
       </div>
 
     </div>
-  </section><!-- End Services Section -->
+  </section>
 
-  <!-- ======= Portfolio Section ======= -->
   <section id="portfolio" class="portfolio">
     <div class="container">
 
@@ -670,9 +665,9 @@
       </div>
 
     </div>
-  </section><!-- End Portfolio Section -->
+  </section>
 
-  <!-- ======= Contact Section ======= -->
+ 
   <section id="contact" class="contact">
     <div class="container">
 
@@ -744,7 +739,7 @@
       </form>
 
     </div>
-  </section><!-- End Contact Section -->
+  </section>
 
   <div class="credits">
     Designed by <a href="https://bootstrapmade.com/">Nifty Designs</a>
